--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Data Analyst - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0"> Data Analyst - Backend developer - Illustrator</p>
             </div>
         </header>
         <!-- Portfolio Section-->
