--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ by pressing the '+' button as shown in the picture below.<br><br>
 <img class="img-fluid rounded mb-5" src="assets/img/portfolio/fin_pro/add_expenses.png" alt="..." /></center>
 4. As soon as a new expense is created, a new row is inserted in our dataset which allows us to create dashboards with charts updating in realtime.<br><br>
 <video width="900" height="400" autoplay muted loop>
-<source src="/assets/vid/1_Portfolio.mov" type="video/mov">
+<source src="/assets/vid/1_Portfolio.mov" type="video/mp4">
 Your browser does not support the video tag.
 </video><br><br>
 5. Here are two dashboards that I have created to monitor and track my expenses:<br><br>
