--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/0.png" alt="..." />
                         </div>
-                        <center><mark>Python</mark> | <mark>Pandas</mark> | <mark>Numpy</mark></center>
+                        <center><mark>Python</mark> | <mark>Pandas</mark></center>
 
                     </div>
                     <!-- Portfolio Item 2-->
@@ -167,11 +167,11 @@
                                     </div>
                                     <!-- Portfolio Modal - Image-->
                                     <!-- Original: <img class="img-fluid rounded mb-5" src="assets/img/portfolio/data_cleaning_py/2.png" alt="..." />-->
-                                    <h4>
-                                        ***Add some explanation of the code. Give context, think of what's the best way to showcase your projects..***
-                                        Check the Data Analysis Process here: https://www.notion.so/Data-Analysis-Process-f5b55a13564e42f28d213779c8022382
-                                        and show the project in that order.
-                                    </h4>                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/1.png" alt="..." />
+                                    <h4>Description:</h4>
+                                    <p>
+                                    In this project, we will be cleaning a dataset containing information about the weather during 2014 and 2015. We will be exploring the data and get it ready for analysis following the Tidy data principles: Each variable is a column, each observation is a row, and each type of observational unit is a table.
+                                    </p><br>                                   
+                                    <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/1.png" alt="..." />
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/2.png" alt="..." />
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/3.png" alt="..." />
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/4.png" alt="..." />
@@ -179,8 +179,6 @@
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/6.png" alt="..." />
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/7.png" alt="..." />
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/8.png" alt="..." />
-                                    <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/9.png" alt="..." />
-                                    <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/10.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <br><br>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -524,7 +522,7 @@ previously created based on categories. This dashboard only shows data from the 
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Unicorn companies study</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -532,9 +530,17 @@ previously created based on categories. This dashboard only shows data from the 
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/safe.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/1.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/2.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/3.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/4.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/5.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/6.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/7.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/8.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/9.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/unicorn_companies/10.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -564,7 +570,9 @@ previously created based on categories. This dashboard only shows data from the 
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="..." />
+                                        <iframe src="https://app.datacamp.com/workspace/w/9ac375ee-eb10-4155-a324-2f352b9db389/edit" title="description"></iframe>
+
+                                    
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
