--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4 mb-5">
-                        <h5><center>Sales dashboard</center></h5>
+                        <h5><center>Netflix dashboard</center></h5>
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
