--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ previously created based on categories. This dashboard only shows data from the 
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Sales Overview</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Netflix Dashboard</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
