--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">
+
+                With over 15 years of experience in IT Support roles, I am driven by a newfound passion for data analysis and actively transitioning into the 
+                field of Data Analytics. Currently advancing skills in data manipulation, statistical analysis, and visualization to leverage analytical insights 
+                for enhancing business strategies and processes.
                     
                 <!-- Hi. I have been working in Tech Support roles for the last few years and I am currently looking forward <br>to making a transition to data science.
                 I have been stuyding on my own and taken some courses in Datacamp and Platzi in order to improve my data skills.
