--- a/index.html
+++ b/index.html
@@ -223,17 +223,16 @@
                                     <!-- Portfolio Modal - Image-->
                                     <div style="text-align: justify">
                                     <p>
-                                    The goal of this dashboard is to understand the whole operation of a Helpdesk department and find out what can be improved. Here are few questions that are revelant for the Helpdesk department:
-                                    <ol type="1">
-                                        <li>What's the application that users request the most?.</li>
-                                        <li>Which country makes most of the requests?.</li>
-                                        <li>What's the most active day of the week?.</li>  
-                                        <li>What's the busiest hour of the day?.</li>
-                                        <li>Is work balanced between support agents?.</li>
-                                        <li>Which department is creating most of the requests?.</li>
-                                        <li>Is it convenient to hire more agents to work the night shift?.</li>
+                                    The objective of this dashboard is to comprehensively analyze the operations of the Helpdesk department and identify areas for improvement. Key questions include:                                    <ol type="1">
+                                        <li>Which application receives the highest number of user requests?</li>
+                                        <li>Which country generates the majority of requests?</li>
+                                        <li>What is the most active day of the week?</li>  
+                                        <li>During which hour of the day is workload the heaviest?</li>
+                                        <li>How evenly is workload distributed among support agents?</li>
+                                        <li>Which department generates the most requests?</li>
+                                        <li>Would hiring additional agents for the night shift be beneficial?</li>
                                     </ol>
-
+                                        
                                     </p>  
                                     </div>        
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/sd_metrics/1.png" alt="..." />
