--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                     <!-- Original: <img class="img-fluid rounded mb-5" src="assets/img/portfolio/data_cleaning_py/2.png" alt="..." />-->
                                     <h4>Description:</h4>
                                     <p>
-                                    In this project, we will be cleaning a dataset containing information about the weather during 2014 and 2015. We will be exploring the data and get it ready for analysis following the Tidy data principles: Each variable is a column, each observation is a row, and each type of observational unit is a table.
+                                    In this project, we will clean a dataset containing weather information from 2014 and 2015. We will explore the data and prepare it for analysis following the Tidy data principles: where each variable corresponds to a column, each observation represents a row, and each type of observational unit is a table.
                                     </p><br>                                   
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/1.png" alt="..." />
                                     <img class="img-fluid" src="assets/img/portfolio/data_cleaning_py/2.png" alt="..." />
